loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:13: error: '(' expected but identifier found.
} while isGroundwhite()==true 
        ^